<?xml version="1.0" encoding="utf-8"?>
<!DOCTYPE resources [
    <!ENTITY clientid "18957">
    ]>

<resources>
    <string name="app_name">StackExchange</string>

    <string name="home_title">Home</string>
    <string name="search_title">Search</string>
    <string name="search_menu_title">Search</string>
    <string name="settings_title">Settings</string>
    <string name="account_title">Account</string>
    <string name="user_info_title">User info</string>
    <string name="auth_user_title">Profile</string>
    <string name="search_options_dialog_title">Search options</string>>
    <string name="tag_options_title">Tags to look for:</string>
    <string name="tag_search_fragment_title">Tag search result</string>
    <string name="dynamic_tag_search_fragment_title">Tag search result for <u>%s</u></string>


    <string name="error_indication">Error occurred</string>
    <string name="search_bar_init_error">Search is broken</string>
    <string name="log_in_btn_title">Log in</string>
    <string name="search_btn_text">Search</string>

    <string name="logged_in_message">You are logged in</string>

    <string name="views_square_title">views</string>
    <string name="answers_square_title">answers</string>
    <string name="votes_square_title">votes</string>


    <string name="stackoverflow_domain">https://stackoverflow.com</string>
    <string name="cookie_string">se-consent=%7b%22s%22%3a1%2c%22d%22%3a%222020-10-24T06%3a00%3a01.1106004Z%22%7d</string>


    <string name="theme_preference_key">theme</string>
    <string name="theme_preference_title">Theme</string>


    <string name="light_theme_name">Light</string>
    <string name="light_theme_entry_value">theme_01</string>
    <string name="dark_theme_name">Dark</string>
    <string name="dark_theme_entry_value">theme_02</string>
    <string name="system_default_theme_name">System Default</string>
    <string name="system_default_theme_entry_value">theme_03</string>

    <string name="auth_redirect_url">unofficial.stackoverflow.app</string>
    <string name="stackapps_client_id">&clientid;</string>
    <string name="auth_url">https://stackoverflow.com/oauth/dialog?client_id=&clientid;&amp;scope=no_expiry&amp;redirect_uri=https://unofficial.stackoverflow.app</string>
    <string name="access_token_query">access_token</string>
    <string name="stackoverflow_account_name">unofficial_stackoverflow</string>
    <string name="stackoverflow_account_type">com.example.stackexchange.authenticator</string>
    <string name="stackoverflow_auth_token_type">unofficial_stackoverflow_auth_key</string>

    <string name="profile_creation_time">Member from %1$s</string>

</resources>